--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -42,32 +42,75 @@ These subtle differences in the machine learning approach of a problem is also r
 To better characterize migrations, we decided to divide our task into four problems. All of them together give us a better overview of the relationship of CDRs to
 long term migrations. These are solved using user information of how they communicated during $T_1$ and no information from $T_0$ will be used. The only difference among the problems will be in how the target variable will be defined.\footnote{In reality, certain variations of the data were considered too, were best performing features were filtered from the dataset to explore how this decreased the overall prediction ability of the algorithm.}
 
-Here, we set $Y$ to be our target variable which is defined for every user $u$,
-where $H_u$ is the user's home antenna. The list of problems considered are defined in the following way:
-
-Knowing which users live in the endemic region
-we want to infer whether they lived in $E_Z$ in the past
-
-
-\todo{correctly define all problems }
+We process the raw data to build our target variable which will be determined as $Y$. This will always be defined for every user $u$. We take $H_u$ to be the user's home antenna. With these definitions, the list of problems considered in this work are defined in the following way:
 
 
 
-\[
-%\begin{equation}
-Y_u =
-\begin{cases}
-&1 \ \mbox{if} \ H_u \in E_Z \mbox{ during } T_0 \\
-&0 \ \mbox{in other cases}.
-\end{cases}
-%\end{equation}
-\]
-With this target variable, we tackle the prediction as a supervised classification problem.
+Knowing which users live in the endemic region we want to infer whether they lived in $E_Z$ in the past:
+
+
+\begin{problems}
+	The following is an enumeration of the tasks we set to evaluate in this work. Together, these are different persepectives of the problem of long-term migrations predictions. 
+	\begin{enumerate}\label{def:problems}
+		\item We want to infer which users lived in $E_Z$ in the past:
+		\label{itm:target1} 
+		\begin{align*}
+			Y_u = 
+			\begin{cases}
+				&1 \ \mbox{if} \ H_u \in E_{Z0} \\
+				&0 \ \mbox{if not}.
+			\end{cases}
+		\end{align*}
+		
+		\item We want to infer which users lived in $E_Z$ in the past and then migrated:\label{itm:target2} 
+		\begin{align*}
+			Y_u = 
+			\begin{cases}
+				&1 \ \mbox{if} \ H_u \in E_{Z0} \cap { E_{Z1} }^{\complement}  \\
+				&0 \ \mbox{if not}.
+			\end{cases}
+		\end{align*}
+		
+		
+		\item Users that migrated to a different region: \label{itm:target3} 
+		\begin{align*}
+			Y_u = 
+			\begin{cases}
+				&1 \ \mbox{if} \ H_u \in (E_{Z0} \cap { E_{Z1} }^{\complement}) \cup (E_{Z1} \cap { E_{Z0} }^{\complement}) \\
+				&0 \ \mbox{if not}.
+			\end{cases}
+		\end{align*}
+		
+		\item Users that are currently not endemic and migrated. This means only analyzing those users where $H_u \in { E_{Z1} }^{\complement}$: \label{itm:target4} 
+		\begin{align*}
+			Y_u = 
+			\begin{cases}
+				&1 \ \mbox{if} \ {H_u \in  E_{Z0} } \\
+				&0 \ \mbox{if not}.
+			\end{cases}
+		\end{align*} 
+		
+		\item \textbf{Bonus.} As an extra problem and for exemplary reasons, we considered tried to detect if a user has a high mobile footpring $M_u$, as defined in \cref{section:def_mobility_diameter}.
+		Users that are currently not endemic and migrated. This means only analyzing those users where $H_u \in { E_{Z1} }^{\complement}$: \label{itm:target5} 
+		\begin{align*}
+			Y_u = 
+			\begin{cases}
+				&1 \ \mbox{if} \ {M_u >  1000 } \\
+				&0 \ \mbox{if not}.
+			\end{cases}
+		\end{align*}
+		
+	\end{enumerate}
+\end{problems}
+
+
+Note that not all problems can be represented by the same dataset. Problems might have different limitations on what is available as our input variable $X$. For example, in \cref{itm:target1} we have no limitations to know $H_u$ at $E_{Z1}$. On the contrary, using this same feature in \cref{itm:target1} would be a problem since we are implicitly introducing the target variable as an attribute. Thus appropriate care must be taken for each case on which attributes are available for the problem being analyzed. 
+
+With the target variables already set in \cref{def:problems}, we tackle the predictions as a supervised classification problem.
 
 
 
-
-\subsection{A working example}\label{section-example}
+\subsection{A working example of a Machine Learning setup}\label{section-example}
 
 From now on we will be talking of the training set and the test set, noted by $\mathrm{T}$  and $\mathrm{Ts}$ as our two data sources. The test set will be a part of the whole dataset that will only used at the end of the algorithmic process. This set will not take part in buidling the machine learning model and will be used only to evaluate its performance. This makes sense knowing that the objective is to build a probabilistic model which has the capacity to correctly predict the class instances of new data objects, such as those from $\mathrm{Ts}$, based on having seen information of objects from $\mathrm{T}$.
 
