define new theorem for problems and add correct cleveref reference printer

--- a/preamble.tex
+++ b/preamble.tex
@@ -256,6 +256,7 @@ pdfkeywords={machine learning}
 \newtheorem{exercise}[theorem]{Exercise}
 \newtheorem*{exercise*}{Exercise.}
 \newtheorem*{solution*}{Solution.}
+\newtheorem{problems}{Problems}
 
 \theoremstyle{remarkdotless}
 \newtheorem{remark}[theorem]{Remark}
@@ -278,12 +279,15 @@ pdfkeywords={machine learning}
     \newcommand{\continuedexref}{\ref*{#1}}\continuedex}
   {\popQED\endcontinuedex}
 
+
 %-----------------------------------------------+
 % Cross-references settings (cleveref settings) |
 %-----------------------------------------------+
 
 \crefname{exercise}{Exercise}{Exercises}
+\crefname{enumerate}{Enumeration}{Enumerations}
 \crefname{stepsi}{Step}{Steps}
+\crefname{problems}{Problems}{Problems}
 
 \crefname{equation}{}{}
 \crefformat{equation}{#2(#1)#3}
