expand explanation of the mobility diameter attribute

--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -292,11 +292,11 @@ A user's home antenna is defined by the most used antenna. For our algorithms we
 With this, users were tagged as `endemic' if their home antenna is in the endemic zone $E_Z$ and `exposed' if any of the ten antennas logged is in the risk area.
 
 
-\subsection{Mobility diameter.}
+\subsection{Mobility diameter.}\label{section:def_mobility_diameter}
 
 The user's logged antennas define a convex hull in space and the radius of the hull is taken to be as the mobility diameter. This length is representative of the area of influence of that individual, a feature expected to be correlated with long-term migrations.
 
-We register the mobility diameter of each user, as the diameter of the convex hull defined by his top 10 used antennas. Again, we generate two values, considering (i) all antennas and (ii) only the antennas used during the \textit{weeknight}.
+We register the mobility diameter of each user, as the diameter in kilometers of the convex hull defined by his top 10 used antennas. Again, we generate two values, considering (i) all antennas and (ii) only the antennas used during the \textit{weeknight}.
 
 
 
